--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "phpunit/phpunit": "^5.5"
     },
     "autoload": {
-        "psr-0": {"dependency-injection": "src/"},
+        "psr-4": {
+            "CatalogOfPhpPatterns\\DependencyInjection\\": "./dependency-injection/src/",
+            "CatalogOfPhpPatterns\\DependencyInjection\\Tests\\": "./dependency-injection/tests/"
+        }
     }
 }
